@@ -196,15 +196,29 @@ class TestIsResponse(unittest.TestCase):
         response = None
         self.assertEqual(self._callFUT(response), False)
 
-    def test_partial_inst(self):
-        response = DummyResponse()
-        response.app_iter = None
-        self.assertEqual(self._callFUT(response), False)
-        
-    def test_status_not_string(self):
-        response = DummyResponse()
-        response.status = None
-        self.assertEqual(self._callFUT(response), False)
+    def test_isnt_no_headerlist(self):
+        class Response(object):
+            pass
+        resp = Response
+        resp.status = '200 OK'
+        resp.app_iter = []
+        self.assertEqual(self._callFUT(resp), False)
+
+    def test_isnt_no_status(self):
+        class Response(object):
+            pass
+        resp = Response
+        resp.app_iter = []
+        resp.headerlist = ()
+        self.assertEqual(self._callFUT(resp), False)
+
+    def test_isnt_no_app_iter(self):
+        class Response(object):
+            pass
+        resp = Response
+        resp.status = '200 OK'
+        resp.headerlist = ()
+        self.assertEqual(self._callFUT(resp), False)
 
 class TestViewConfigDecorator(unittest.TestCase):
     def setUp(self):
